// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryClient fetchSummary with a rolling and occurrences composite SLO returns the summary 1`] = `
Object {
  "errorBudget": Object {
    "consumed": 1.666667,
    "initial": 0.03,
    "isEstimated": false,
    "remaining": -0.666667,
  },
  "sliValue": 0.95,
  "status": "VIOLATED",
}
`;

exports[`SummaryClient fetchSummary with a rolling and occurrences composite SLO returns the summary 2`] = `
Array [
  Object {
    "index": ".slo-observability.sli-v2*",
  },
  Object {
    "aggs": Object {
      "bySloId": Object {
        "aggs": Object {
          "good": Object {
            "sum": Object {
              "field": "slo.numerator",
            },
          },
          "total": Object {
            "sum": Object {
              "field": "slo.denominator",
            },
          },
        },
        "terms": Object {
          "field": "slo.id",
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "gte": "2023-05-22T10:15:00.000Z",
                "lt": "2023-05-29T10:15:00.000Z",
              },
            },
          },
        ],
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "bool": Object {
              "must": Array [
                Object {
                  "term": Object {
                    "slo.id": "slo-1",
                  },
                },
                Object {
                  "term": Object {
                    "slo.revision": 1,
                  },
                },
              ],
            },
          },
          Object {
            "bool": Object {
              "must": Array [
                Object {
                  "term": Object {
                    "slo.id": "slo-2",
                  },
                },
                Object {
                  "term": Object {
                    "slo.revision": 2,
                  },
                },
              ],
            },
          },
        ],
      },
    },
    "size": 0,
  },
]
`;

exports[`SummaryClient with rolling and timeslices SLO returns the summary 1`] = `
Object {
  "errorBudget": Object {
    "consumed": 1.666667,
    "initial": 0.03,
    "isEstimated": false,
    "remaining": -0.666667,
  },
  "sliValue": 0.95,
  "status": "VIOLATED",
}
`;

exports[`SummaryClient with rolling and timeslices SLO returns the summary 2`] = `
Array [
  Object {
    "index": ".slo-observability.sli-v2*",
  },
  Object {
    "aggs": Object {
      "bySloId": Object {
        "aggs": Object {
          "good": Object {
            "sum": Object {
              "field": "slo.isGoodSlice",
            },
          },
          "total": Object {
            "value_count": Object {
              "field": "slo.isGoodSlice",
            },
          },
        },
        "terms": Object {
          "field": "slo.id",
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "gte": "2023-05-22T10:15:00.000Z",
                "lt": "2023-05-29T10:15:00.000Z",
              },
            },
          },
        ],
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "bool": Object {
              "must": Array [
                Object {
                  "term": Object {
                    "slo.id": "slo-1",
                  },
                },
                Object {
                  "term": Object {
                    "slo.revision": 1,
                  },
                },
              ],
            },
          },
          Object {
            "bool": Object {
              "must": Array [
                Object {
                  "term": Object {
                    "slo.id": "slo-2",
                  },
                },
                Object {
                  "term": Object {
                    "slo.revision": 2,
                  },
                },
              ],
            },
          },
        ],
      },
    },
    "size": 0,
  },
]
`;
